# Coding

./: README.md  Untitled Document 1  Untitled Document 2  to Install
c++/: .ardbot.cpp.swp  a.out  ardbot.cpp  key.cpp  linklist.cpp  ll.cpp
catkin_ws_old/: qtnode3.cpp
catkin_ws_old/beginner_tutorials/: package.xml
catkin_ws_old/beginner_tutorials/src/: listener.cpp  talker.cpp
catkin_ws_old/framer/: CMakeLists.txt  package.xml
catkin_ws_old/framer/include/framer/: framer.h
catkin_ws_old/framer/src/: framer.cpp  main.cpp
catkin_ws_old/framer/ui/: framer.pro  framer.ui
catkin_ws_old/houghLine/: CMakeLists.txt
catkin_ws_old/houghLine/src/: task.cpp
catkin_ws_old/imgtransport/src/: itnode1.cpp  itnode2.cpp  itnode3.cpp
catkin_ws_old/qtimg/: CMakeLists.txt  package.xml
catkin_ws_old/qtimg/include/qtimg/: qtnode1.h  qtnode2.h  qtnode3.h
catkin_ws_old/qtimg/src/: main1.cpp  qtnode1.cpp  qtnode2.cpp  qtnode3.cpp
catkin_ws_old/qtimg/ui/: qtnode2.ui  qtnode3.ui
catkin_ws_old/qtnode2/: CMakeLists.txt  package.xml
catkin_ws_old/qtnode2/src/: main2.cpp
catkin_ws_old/qtnode3/: CMakeLists.txt  package.xml
catkin_ws_old/qtnode3/include/: qtnode3.h
catkin_ws_old/qtnode3/src/: main3.cpp  qtnode3.cpp
catkin_ws_old/ros_cvbridge/: CMakeLists.txt  package.xml
catkin_ws_old/square/: CMakeLists.txt  package.xml
catkin_ws_old/square/src/: node1.cpp  node2.cpp  node3.cpp
catkin_ws_old/task3/: CMakeLists.txt  package.xml
catkin_ws_old/task3/src/: .talker.cpp.swo  talker.cpp
catkin_ws_old/taskrosqt/: CMakeLists.txt  package.xml
catkin_ws_old/taskrosqt/src/: node1.cpp
catkin_ws_old/taskrosqt/ui/: node3qt.ui
motion_detection/: demo.py  demo1.py  demo2.py  demo3.py
opencv/: .shape.py.swp  .test2.py.swp  ballTrackingFinal.py  colorPick.py  face.py  output.avi  shape.py  shape2.py  shape3.py  shapeOld.py  split.py  test1.py  test2.py  video.py  videoWrite.py
python/: .test2.py.swo  .test2.py.swp  .test4.py.swp  a.out  class.py  test1.py  test1.txt  test2.py  test3.py  test4.py
python/Assignment/: .calc.py.swn  .calc.py.swo  calc.py  car.py  letter.py  ram.py  sort.py
python/Assignment/hackerEarth/: anagram.py
qt_project/build-qt_plot-Desktop-Debug/: Makefile  moc_mainwindow.cpp  moc_qcustomplot.cpp  ui_mainwindow.h
qt_project/qt_plot/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_plot.pro
qt_project/qt_plot_lib/: qt_plot_lib.cpp  qt_plot_lib.h  qt_plot_lib.pro  qt_plot_lib_global.h
